fixed team text spacing

--- a/css/style.css
+++ b/css/style.css
@@ -558,8 +558,8 @@ input[type=submit] {
 	text-align: center;
 }	
 
-.flip-card-back p {
-		margin-top: 8vh;
+.flip-card-back p:not(:last-child) {
+	margin-top: 8vh;
 }
 	
 .title{
